test/zinc_source/compile_errors/structs/03_orthogonal_local_collision.zn
// expected-error: orthogonal composition for 'Item' has duplicate field 'path'

struct File {
    path: string
}

struct Meta {
    owner_id: i32
}

struct Item [ File | Meta ] {
    path: string
}

fn main() {
    item = Item {
        path: "a"
        owner_id: 1
    }
    print(item.path)
}
